Adding the second section (Product) to the Ecommerce Project